Tue Jun 20 13:35:04 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/HTIOP/htiop_endpointsC.h:
          Updated for all changes

Tue Jun 20 12:41:04 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/BD_String_SArgument_T.cpp:
          Fixed compilation problems with Borland

Tue Jun 20 12:29:04 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/Options.html:
          Document ORBOutputCDRAllocator and don't refer to cvs.doc.wustl.edu
          for files, just get them locally

        * docs/compiler.html:
          Document -Sorb

Tue Jun 20 10:21:04 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Security/SL3_CredentialsCurator.h:
          Fixed compile error

Tue Jun 20 08:12:04 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Any_Insert_Policy_T.h:
          Reworded the policies to just contain a static method so that we
          don't need to create an instance

        * tao/Argument.h:
          When we don't have interceptors, just don't declare the In/Out/InOut
          classes, just typedef them to Argument

        * tao/Basic_Arguments.h:
        * tao/Basic_Argument_T.{h,cpp.inl}:
        * tao/BD_String_Argument_T.{h,cpp,inl}:
        * tao/Fixed_Array_Argument_T.{h,cpp,inl}:
        * tao/Fixed_Size_Argument_T.{h,cpp,inl}:
        * tao/Object_Argument_T.{h,cpp,inl}:
        * tao/Object.h:
        * tao/Special_Basic_Argument_T.{h,cpp,inl}:
        * tao/Special_Basic_Arguments.h:
        * tao/UB_String_Argument_T.{h,cpp,inl}:
        * tao/UB_String_Argument.h:
        * tao/Var_Array_Argument_T.{h,cpp,inl}:
        * tao/Var_Size_Argument_T.{h,cpp,inl}:
        * tao/AnyTypeCode/Any_Arg_Traits.h:
        * tao/AnyTypeCode/TypeCode.h:
        * tao/IFR_Client/IFR_Client_Adapter_Impl.cpp:
        * tao/PortableServer/Any_SArg_Traits.h:
        * tao/PortableServer/Basic_SArgument_T.{h,cpp,inl}: